7901796: Use Java SA without sa-jdi.jar in JDK 9b131+